--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -13,23 +13,35 @@
         android:layout_margin="10dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txtTite"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:ellipsize="marquee"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:text="ggggfggg g g fgfgf f gfd gf gf fg fg fgf gf f f f  f gf g fg fg  gf gf g fg f gf f gf gg fg g g g  g f g g gfg f g g f frrr rt t rt rtrrfgrr r rrt"/>
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/txtTite"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:ellipsize="marquee"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:layout_weight="1"/>
+
+            <ImageView
+                android:id="@+id/imgPin"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/pin"/>
+
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/txtText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="ggggfggg g g fgfgf f gfd gf gf fg fg fgf gf f f f  f gf g fg fg  gf gf g fg f gf f gf gg fg g g g  g f g g gfg f g g f frrr rt t rt rtrrfgrr r rrt"/>
+            android:layout_marginTop="8dp"/>
 
     </LinearLayout>
 
